# gliner-as-a-service

./: Dockerfile.gliner  pyproject.toml
dependencies/: requirements-clean.txt
