[tool.poetry]
name = "gliner-as-a-service"
version = "1.0.0"
description = ""
authors = ["henrikalbihn <61203850+henrikalbihn@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "app", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.12"}
redis = "^6.0.0"
loguru = "^0.7.3"
celery = "^5.5.2"
gputil = "^1.4.0"
flupy = "^1.2.1"
gliner = "^0.2.19"
transformers = "^4.51.3"
torchvision = "^0.22.0"
flower = "^2.0.1"
ilsp-nlp-commons = {git = "https://gitlab.com/ilsp-nlp/ilsp-nlp-commons.git", rev = "0.1.1"}

[tool.poetry.scripts]
gliner = 'app.main:main'


[[tool.poetry.source]]
name = "ilsp_nlp"
url = "https://gitlab.com/api/v4/groups/99814413/-/packages/pypi/simple"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
locust = "^2.37.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
